# igrepr

./: Cargo.toml  README.md  igr.tape
.github/workflows/: test.yml
src/: app.rs  cli.rs  clipboard.rs  filter.rs  lib.rs  main.rs  matcher.rs  models.rs  parser.rs  transform.rs  tui.rs  ui.rs
src/filter/: contains.rs  ends_with.rs  invert_match.rs  invert_match_regex.rs  length.rs  regex.rs  starts_with.rs
src/matcher/: exact.rs  ignore_case.rs  number.rs  regex.rs  whole_word.rs
src/models/: config.rs  editor.rs  file_preview.rs  file_result.rs  line.rs  match_result.rs  search.rs  search_condition.rs  search_result.rs  value.rs
src/transform/: camel_case.rs  delete.rs  insert.rs  kebab_case.rs  lower_case.rs  replace.rs  snake_case.rs  trim.rs  trim_end.rs  trim_start.rs  update.rs  upper_camel_case.rs  upper_case.rs  upper_kebab_case.rs  upper_snake_case.rs
src/ui/: confirm.rs  event.rs  file_preview.rs  help.rs  icon.rs  input.rs  input_list.rs  match_colors.rs  search_condition.rs  search_result.rs  select_contidion.rs  status.rs  theme.rs
