[package]
edition = "2021"
keywords = ["cli", "tui", "grep"]
name = "igr"
version = "0.1.0"

[dependencies]
anyhow = "1.0.93"
clap = {version = "4.5.20", features = ["derive", "env"]}
colored = "2.1.0"
convert_case = "0.6.0"
crossterm = "0.27.0"
envy = "0.4.2"
ignore = "0.4.23"
indicatif = "0.17.8"
itertools = "0.13.0"
nom = "7.1.3"
ratatui = "0.29.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = {version = "1.0.215", features = ["derive"]}
strum = {version = "0.26.3", features = ["derive"]}
strum_macros = "0.26.4"
syntect = "5.2.0"
syntect-tui = "3.0.5"
tui-input = "0.11.1"

[dev-dependencies]
rstest = "0.21.0"
